# warpgate-admin/src/api/mod.rs
@@ -1,4 +1,5 @@
-use poem_openapi::OpenApi;
+use poem_openapi::auth::Bearer;
+use poem_openapi::{OpenApi, SecurityScheme};
 
 mod known_hosts_detail;
 mod known_hosts_list;
@@ -13,6 +14,23 @@ mod targets;
 mod tickets_detail;
 mod tickets_list;
 mod users;
+
+#[derive(SecurityScheme)]
+#[oai(type = "bearer")]
+pub(crate) struct TokenAuth(Bearer);
+
+pub struct Api;
+
+#[OpenApi]
+impl Api {
+    #[oai(path = "/__", method = "get", operation_id = "_ignore_me")]
+    async fn _hidden(
+        &self,
+        _auth: TokenAuth, // only needed once for the security schema to be included in the spec
+    ) -> poem::Result<()> {
+        Ok(())
+    }
+}
 
 pub fn get() -> impl OpenApi {
     (
@@ -29,5 +47,6 @@ pub fn get() -> impl OpenApi {
         known_hosts_detail::Api,
         ssh_keys::Api,
         logs::Api,
+        Api,
     )
 }
